<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/gpsLocation"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="166dp"
            android:layout_marginRight="166dp"
            android:layout_marginBottom="526dp"
            android:text="@string/GPSLocation"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/lat"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="93dp"
            android:layout_marginRight="93dp"
            android:layout_marginBottom="443dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center_horizontal"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/lon"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="92dp"
            android:layout_marginRight="92dp"
            android:layout_marginBottom="377dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center_horizontal"
            android:textAlignment="center" />

        <Button
            android:id="@+id/gpsButton"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="247dp"
            android:layout_marginRight="247dp"
            android:layout_marginBottom="302dp"
            android:text="@string/GPS" />

        <TextView
            android:id="@+id/timezoneText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="96dp"
            android:layout_marginRight="96dp"
            android:layout_marginBottom="230dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center_horizontal"
            android:textAlignment="center" />

        <Button
            android:id="@+id/timezone"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="223dp"
            android:layout_marginRight="223dp"
            android:layout_marginBottom="148dp"
            android:text="@string/Timezone" />

    </RelativeLayout>

</FrameLayout>