<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonViewFragment">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/ravish_green">

        <EditText
            android:id="@+id/plain_text_input"
            android:layout_width="match_parent"
            android:layout_height="373dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="264dp"
            android:background="@drawable/rounded_corners"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/bluish_white"
            app:layout_constraintBottom_toTopOf="@+id/textChanger"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.766"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="425dp" />

        <Button
            android:id="@+id/Tap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="133dp"
            android:layout_marginRight="133dp"
            android:layout_marginBottom="140dp"
            android:text="@string/Tap_Button"
            android:textColor="@color/bluish_white"
            app:backgroundTint="@color/orange"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="580dp" />

        <Button
            android:id="@+id/click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="127dp"
            android:layout_marginRight="127dp"
            android:layout_marginBottom="68dp"
            app:backgroundTint="@color/orange"
            android:textColor="@color/bluish_white"
            android:text="@string/Click_Button"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="496dp" />

        <TextView
            android:id="@+id/textChanger"
            android:layout_width="262dp"
            android:layout_height="39dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="68dp"
            android:layout_marginRight="68dp"
            android:layout_marginBottom="205dp"
            android:background="@drawable/rounded_corners"
            android:hint="@string/Enter_Text"
            android:padding="10dp"
            android:textColor="@color/bluish_white"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="425dp" />

    </RelativeLayout>

</FrameLayout>